added base styling for song and player. set up scss partial files.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,3 +4,6 @@
     padding: 0;
     box-sizing: border-box;
 }
+//* Importing the partials for the individual components.
+@import './song';
+@import './player';
