--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,3 +7,7 @@
 //* Importing the partials for the individual components.
 @import './song';
 @import './player';
+
+h1,h2,h3{
+    color: rgb(54, 54, 54);
+}
