--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,9 +4,21 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+//font
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+h3,h4 {
+    font-weight: 400;
+    color: rgb(100,100,100);
+}
+
 //* Importing the partials for the individual components.
 @import './song';
 @import './player';
+@import './library';
 
 h1,h2,h3{
     color: rgb(54, 54, 54);
