--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -7,17 +7,21 @@
     background: white;
     box-shadow: 2px 2px 50px rgb(201, 201, 201);
     overflow: scroll;
+    transform: translateX(-100%);
+    transition: all 0.5s ease;
+    opacity:0;
     h2 {
         padding: 2rem;
     }
 }
 
 .library-songs {
-    display: flex;
     align-items: center;
-    padding: 1rem 2rem 1rem 2rem;
     cursor: pointer;
-
+    display: flex;
+    padding: 1rem 2rem 1rem 2rem;
+    transition: background 0.5s ease;
+    
     img{
         width: 30%;
     }
@@ -42,7 +46,15 @@
     scrollbar-color: rgba(155,155,155,0.5) transparent;
 }
 
-*::-webkit-scrollbar {
+/* The emerging W3C standard
+   that is currently Firefox-only */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(155, 155, 155, 0.7) transparent;
+}
+  
+  /* Works on Chrome/Edge/Safari */
+  *::-webkit-scrollbar {
     width: 5px;
 }
 
@@ -57,5 +69,16 @@
 }
 
 .selected {
-    background: violet;
+    background: rgb(146, 190, 255);
+}
+
+.library-active {
+    transform: translateX(0%);
+    opacity:1;
+}
+
+@media screen and (max-width: 768px) {
+    .library {
+        width: 100%;
+    }
 }
