--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -1,18 +1,18 @@
 .player {
-    min-height: 20vh;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
+    min-height: 20vh;
 }
 
 .time-control {
-    width: 50%;
     display: flex;
+    width: 50%;
     
     input{
-        width: 100%;
         padding: 1rem 0rem;
+        width: 100%;
     }
     p{
         padding: 1rem; //padding left and right messes up the value for time-control
@@ -20,13 +20,22 @@
 }
 
 .play-control{
+    align-items: center;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding: 1rem;
     width: 30%;
 
     svg {
         cursor: pointer;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .play-control {
+        width: 60%;
+    }
+    .time-control {
+        width: 90%;
     }
 }
