--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,8 +1,15 @@
+//* Importing the partials for the individual components.
+@import './song';
+@import './player';
+@import './library';
+@import './nav';
+
 // * = removing all the styles from all the elements.
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+
 }
 
 //font
@@ -10,17 +17,23 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h3,h4 {
-    font-weight: 400;
-    color: rgb(100,100,100);
+.App {
+    transition: all 0.5s ease;
 }
 
-//* Importing the partials for the individual components.
-@import './song';
-@import './player';
-@import './library';
-@import './nav';
-
-h1,h2,h3{
-    color: rgb(54, 54, 54);
+.library-active {
+    margin-left: 30%;
 }
+
+h1 {
+        font-size: 1rem;
+    }
+    h2 {
+        color: rgb(51, 51, 51);
+    }
+    h3,
+    h4 {
+        color: rgb(100, 100, 100);
+        font-weight: 400;
+}
+
