--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -11,8 +11,10 @@
     width: 50%;
     
     input{
-        padding: 1rem 0rem;
         width: 100%;
+        -webkit-appearance: none;
+        background: transparent;
+        cursor: pointer;
     }
     p{
         padding: 1rem; //padding left and right messes up the value for time-control
@@ -29,6 +31,36 @@
     svg {
         cursor: pointer;
     }
+}
+
+input[type="range"]:focus {
+    outline: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 16px;
+    width: 16px;
+}
+
+.track {
+    background: lightblue;
+    width: 100%;
+    height: 1rem;
+    position: relative;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+
+.animate-track {
+    background: rgb(204,204,204);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateX(0%);
+    pointer-events: none;
 }
 
 @media screen and (max-width: 768px) {
