--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -9,6 +9,8 @@
 .time-control {
     display: flex;
     width: 50%;
+    justify-content: space-evenly;
+    align-items: center;
     
     input{
         width: 100%;
@@ -64,10 +66,17 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 @media screen and (max-width: 768px) {
-    .play-control {
-        width: 60%;
-    }
-    .time-control {
-        width: 90%;
-    }
+        .play-control {
+            width: 60%;
+        }
+        .time-control {
+            width: 100%;
+        }
+
+        .mobile-active {
+            .player, .play-control, .time-control {
+                display: none;
+                width: 0px;
+            }
+        }
 }
